<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:text="Post"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:id="@+id/post_title"
            android:gravity="center"
            android:layout_weight="1.64" />


        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/title_field"
            android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/post_title"
        android:layout_alignTop="@+id/post_title"
            android:hint="Enter Title Here" />


    <Button
        android:text="Upload Picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uploadButton"
        android:layout_alignTop="@+id/pic_textview"
        android:layout_alignEnd="@+id/title_field"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/pic_textview" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignTop="@+id/textView8"
        android:id="@+id/price_field"
        android:hint="Enter Price Here"
        android:gravity="center"
        android:layout_toEndOf="@+id/description_view" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/address_field"
            android:hint="Enter address"
            android:gravity="center"
            android:layout_below="@+id/uploadButton"
            android:layout_alignStart="@+id/pic_textview" />

        <TextView
            android:text="Enter Start Date Below:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDate_label"
            android:gravity="center"
            android:layout_below="@+id/startDatePicker"
            android:layout_toStartOf="@+id/uploadButton" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDatePicker"
            android:layout_weight="0.09" />

        <TextView
            android:text="Enter End Date Below:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endDate_label"
            android:gravity="center"
            android:layout_below="@+id/endDatePicker"/>
            //android:layout_toStartOf="@+id/uploadButton

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endDatePicker"
            android:layout_weight="0.09" />

        <TextView
            android:text="Enter Start Time Below:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startTime_label"
            android:gravity="center"
            android:layout_below="@+id/coveredCheckBox"
            android:layout_toStartOf="@+id/uploadButton" />

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startTime_picker"
            android:layout_weight="1.64" />

        <TextView
            android:text="Enter End Time Below:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endTime_label"
            android:gravity="center"
            android:layout_below="@+id/coveredCheckBox"
            android:layout_toStartOf="@+id/uploadButton" />

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endTime_picker"
            android:layout_weight="1.64" />

        <CheckBox
        android:text="SUV"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:id="@+id/suvCheckBox"
        android:layout_alignBaseline="@+id/handicapCheckBox"
        android:layout_alignBottom="@+id/handicapCheckBox"
        android:layout_alignEnd="@+id/price_field" />

    <CheckBox
        android:text="Handicapped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/handicapCheckBox"
        android:layout_alignBaseline="@+id/coveredCheckBox"
        android:layout_alignBottom="@+id/coveredCheckBox"
        android:layout_toStartOf="@+id/suvCheckBox" />

        <CheckBox
            android:text="Covered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coveredCheckBox"
            android:layout_below="@+id/price_field"
            android:layout_alignStart="@+id/description_view" />




    <EditText
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description_field"
        android:layout_alignStart="@+id/description_view"
        android:layout_above="@+id/postButton"
        android:layout_below="@+id/description_view"
        android:layout_alignEnd="@+id/suvCheckBox"
        android:hint="Enter Description Here"
        android:gravity="center"/>


        <Button
            android:text="Post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postButton"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/description_field"
            android:layout_marginBottom="29dp" />


</LinearLayout>

    </ScrollView>





</RelativeLayout>
