<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EditTextEmail"
        android:layout_weight="0.11"
        android:hint="Email Username"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/EditTextPassword"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/EditTextConfirmPassword"
        android:layout_weight="0.11"
        android:hint="Confirm Password"
        android:layout_below="@+id/EditTextPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Upload Profile Picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/UploadVerificationButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:id="@+id/UploadProfileButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/EditTextPassword"
        android:layout_weight="0.11"
        android:hint="Password"
        android:layout_below="@+id/EditTextEmail"
        android:layout_alignStart="@+id/EditTextConfirmPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/EditTextConfirmPassword"
        android:layout_alignStart="@+id/EditTextConfirmPassword"
        android:id="@+id/EditTextFirstName"
        android:hint="First Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/EditTextFirstName"
        android:layout_alignStart="@+id/EditTextFirstName"
        android:id="@+id/EditTextLastName"
        android:hint="Last Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/EditTextLastName"
        android:layout_alignStart="@+id/EditTextLastName"
        android:id="@+id/EditTextPhoneNumber"
        android:hint="Phone Number" />

    <Button
        android:text="Upload Verfication Picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:id="@+id/UploadVerificationButton"
        android:layout_above="@+id/RegisterButton"
        android:layout_centerHorizontal="true" />


    <CheckBox
        android:text="Seeker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekerCheckBox"
        android:layout_toLeftOf="@+id/RegisterButton"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"/>

    <CheckBox
        android:text="Owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ownerCheckBox"
        android:layout_toLeftOf="@+id/seekerCheckBox"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterButton"
        android:layout_alignBaseline="@+id/seekerCheckBox"
        android:layout_alignBottom="@+id/seekerCheckBox"
        android:layout_alignEnd="@+id/UploadVerificationButton" />
</RelativeLayout>
